@@ -9,6 +9,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	Add vpassert --synthcov, --axiom and --vcs switches.
 
+****	Fix parsing single files > 2GB.  [Jeffrey Short]
+
 ****	Fix vpassert to insert `lines on every line where needed.
 
 ****	Pass pin numbers for functions/tasks to SigParser::port_cb.
